# abliterlitics

./: .dockerignore  .gitignore  AGENTS.md  KL.md  LICENSE  README.md  TEMPLATE.md  WEIGHTS_COMPARISON.md  abliterlitics.sh  check_benchmarks.sh  check_categories.py  check_harmbench.sh  check_scores.py  comparison.example.json  comparison.json  comparison.schema.json  fix_delta_chart.py  patched_run.sh  patched_run_v2.sh  patched_run_v3.sh  pyproject.toml  requirements.txt
.opencode/agents/: harm-reviewer.md
comparisons/gemma4-e2b/: BENCHMARKS.md  COMPARISON.md  HARMBENCH.md  KL.md  NOTES.md  README.md  community_posts.md  comparison.json
comparisons/qwen36-35b/: comparison.json
docker/: .dockerignore  Dockerfile.forensics  Dockerfile.gguf_convert  Dockerfile.heretic  Dockerfile.ik-llamacpp  Dockerfile.llamacpp  Dockerfile.lmeval  Dockerfile.lmeval_nightly  Dockerfile.lmeval_sglang
docs/: EXAMPLES.md  GPU_SETUP.md  METHODOLOGY.md  SECURITY.md
graphs/: glm47_index.html
older_comparisons/: GLM-4.7-Flash.md  Qwen3-4B-2507-Instruct.md  Qwen3.5-27B.md  Qwen3.5-2B.md  Qwen3.5-4B.md  Qwen3.5-9B.md  Qwen3.6-27B.md
runners/: _load_comparison.py  common.sh  monitor_abliterix.sh  run_harmbench.py  run_harmbench_overnight.sh  run_kl.sh  run_lm_eval.sh  run_weights.sh
src/: __init__.py  config.py  db.py  docker_helpers.py  generate_gemma4_card_graphs.py  generate_glm_card_graphs.py  generate_qwen_card_graphs.py  gpu.py  make_weight_graphs.py  model_config.py  qwen36_gsm8k_efficiency.py
src/abliterlitics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/benchmark/: benchmark_eval.py  gsm8k_eval.py  harmbench_classify.py  harmbench_generate.py  harmbench_review.py  logprobs_proxy.py  reviewer_prompt.py
src/kl/: __init__.py  kl_divergence.py
src/report/: generate_graphs.py  provenance_report.py
src/weight/: __init__.py  cross_arch_comparison.py  edit_vector_analysis.py  expert_analysis.py  layer_analysis.py  lowrank_reconstruction.py  panel_comparison.py  stacking_analysis.py  subspace_alignment.py  svd_analysis.py  technique_correlation.py  technique_fingerprint.py
tests/: conftest.py  test_config.py  test_gpu.py  test_model_config.py
tests/fixtures/: harmbench_labeled.json
tests/test_benchmark/: test_harmbench_classify.py  test_harmbench_generate.py  test_harmbench_review.py  test_logprobs_proxy.py
tests/test_kl/: __init__.py  test_kl_divergence.py
tests/test_report/: test_generate_graphs.py
tests/test_weight/: __init__.py  test_correlation.py  test_cross_arch.py  test_edit_vector.py  test_expert.py  test_fingerprint.py  test_layer_analysis.py  test_lowrank.py  test_panel_comparison.py  test_stacking.py  test_subspace.py  test_svd.py
